Added jQuery library

--- a/sequence.html
+++ b/sequence.html
@@ -2,6 +2,13 @@
 <link rel="stylesheet" href="format.css" type="text/css" />
 
 <body>
-	<div id="gameboard" style="background:black; height:100vh;">
+	<div id="gameboard" style="background:gray; height:100vh;">
         
 <title>Sequence</title>
+<script src="jquery-2.2.0.min.js"></script>
+
+
+<script>
+    //this is where the javascript will go  
+    $("#gameboard").css("background", "purple");    
+</script>
