--- a/sequence.html
+++ b/sequence.html
@@ -40,135 +40,123 @@
     <div class="jumbotron">
       <table style="width:100%">
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>wild</td>
+            <td>spade10</td>		
+            <td>spadeQ</td>
+            <td>spadeK</td>
+            <td>spadeA</td>		
+            <td>diamond2</td>
+            <td>diamond3</td>
+            <td>diamond4</td>		
+            <td>diamond5</td>
+            <td>wild</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>spade9</td>
+            <td>heart10</td>		
+            <td>heart9</td>
+            <td>heart8</td>
+            <td>heart7</td>		
+            <td>heart6</td>
+            <td>heart5</td>
+            <td>heart4</td>		
+            <td>heart3</td>
+            <td>diamond6</td>
           </tr><tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>spade8</td>
+            <td>heartQ</td>		
+            <td>diamond7</td>
+            <td>diamond8</td>
+            <td>diamond9</td>		
+            <td>diamond10</td>
+            <td>diamondQ</td>
+            <td>diamondK</td>		
+            <td>heart2</td>
+            <td>diamond7</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>spade7</td>
+            <td>heartK</td>		
+            <td>diamond6</td>
+            <td>club2</td>
+            <td>heartA</td>		
+            <td>heartK</td>
+            <td>heartQ</td>
+            <td>diamondA</td>		
+            <td>spade2</td>
+            <td>diamond8</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>spade6</td>
+            <td>heartA</td>		
+            <td>diamond5</td>
+            <td>club3</td>
+            <td>heart4</td>		
+            <td>heart3</td>
+            <td>heart10</td>
+            <td>clubA</td>		
+            <td>spade3</td>
+            <td>diamond9</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>spade5</td>
+            <td>club2</td>		
+            <td>diamond4</td>
+            <td>club4</td>
+            <td>heart5</td>		
+            <td>heart2</td>
+            <td>heart9</td>
+            <td>clubK</td>		
+            <td>spade4</td>
+            <td>diamond10</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>spade4</td>
+            <td>club3</td>		
+            <td>diamond3</td>
+            <td>club5</td>
+            <td>heart6</td>		
+            <td>heart7</td>
+            <td>heart8</td>
+            <td>clubQ</td>		
+            <td>spade5</td>
+            <td>diamondQ</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>spade3</td>
+            <td>club4</td>		
+            <td>diamond2</td>
+            <td>club6</td>
+            <td>club7</td>		
+            <td>club8</td>
+            <td>club9</td>
+            <td>club10</td>		
+            <td>spade6</td>
+            <td>dimaondK</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>spade2</td>
+            <td>club5</td>		
+            <td>spadeA</td>
+            <td>spadeK</td>
+            <td>spadeQ</td>		
+            <td>spade10</td>
+            <td>spade9</td>
+            <td>spade8</td>		
+            <td>spade7</td>
+            <td>diamondA</td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
-            <td>2</td>		
-            <td>3</td>
-            <td>1</td>
+            <td>wild</td>
+            <td>club6</td>		
+            <td>club7</td>
+            <td>club8</td>
+            <td>club9</td>		
+            <td>club10</td>
+            <td>clubQ</td>
+            <td>clubK</td>		
+            <td>clubA</td>
+            <td>wild</td>
           </tr>
       </table>
     </div>
@@ -184,13 +172,13 @@
           <h1>HAND PLACEHOLDER</h1>
           <table>
             <tr>
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
+              <td>card 1</td>
+              <td>card 2</td>
+              <td>card 3</td>
+              <td>card 4</td>
+              <td>card 5</td>
+              <td>card 6</td>
+              <td>card 7 (optional)</td>
             </tr>
           </table>
        </div>
