--- a/sequence.html
+++ b/sequence.html
@@ -41,15 +41,15 @@
       <table style="width:100%">
           <tr>
             <td>wild</td>
-            <td>spade10</td>		
-            <td>spadeQ</td>
-            <td>spadeK</td>
-            <td>spadeA</td>		
-            <td>diamond2</td>
-            <td>diamond3</td>
-            <td>diamond4</td>		
-            <td>diamond5</td>
-            <td>wild</td>
+            <td id = "spade10">spade10</td>		
+            <td id = "spade12">spadeQ</td>
+            <td id = "spade13">spadeK</td>
+            <td id = "spade1">spadeA</td>		
+            <td id = "diamond2">diamond2</td>
+            <td id = "diamond3">diamond3</td>
+            <td id = "diamond4">diamond4</td>		
+            <td id = "diamond5">diamond5</td>
+            <td id = "wild">wild</td>
           </tr>
           <tr>
             <td>spade9</td>
@@ -78,7 +78,7 @@
             <td>spade7</td>
             <td>heartK</td>		
             <td>diamond6</td>
-            <td>club2</td>
+            <td>clover2</td>
             <td>heartA</td>		
             <td>heartK</td>
             <td>heartQ</td>
@@ -90,53 +90,53 @@
             <td>spade6</td>
             <td>heartA</td>		
             <td>diamond5</td>
-            <td>club3</td>
+            <td>clover3</td>
             <td>heart4</td>		
             <td>heart3</td>
             <td>heart10</td>
-            <td>clubA</td>		
+            <td>cloverA</td>		
             <td>spade3</td>
             <td>diamond9</td>
           </tr>
           <tr>
             <td>spade5</td>
-            <td>club2</td>		
+            <td>clover2</td>		
             <td>diamond4</td>
-            <td>club4</td>
+            <td>clover4</td>
             <td>heart5</td>		
             <td>heart2</td>
             <td>heart9</td>
-            <td>clubK</td>		
+            <td>cloverK</td>		
             <td>spade4</td>
             <td>diamond10</td>
           </tr>
           <tr>
             <td>spade4</td>
-            <td>club3</td>		
+            <td>clover3</td>		
             <td>diamond3</td>
-            <td>club5</td>
+            <td>clover5</td>
             <td>heart6</td>		
             <td>heart7</td>
             <td>heart8</td>
-            <td>clubQ</td>		
+            <td>cloverQ</td>		
             <td>spade5</td>
             <td>diamondQ</td>
           </tr>
           <tr>
             <td>spade3</td>
-            <td>club4</td>		
+            <td>clover4</td>		
             <td>diamond2</td>
-            <td>club6</td>
-            <td>club7</td>		
-            <td>club8</td>
-            <td>club9</td>
-            <td>club10</td>		
+            <td>clover6</td>
+            <td>clover7</td>		
+            <td>clover8</td>
+            <td>clover9</td>
+            <td>clover10</td>		
             <td>spade6</td>
             <td>dimaondK</td>
           </tr>
           <tr>
             <td>spade2</td>
-            <td>club5</td>		
+            <td>clover5</td>		
             <td>spadeA</td>
             <td>spadeK</td>
             <td>spadeQ</td>		
@@ -148,14 +148,14 @@
           </tr>
           <tr>
             <td>wild</td>
-            <td>club6</td>		
-            <td>club7</td>
-            <td>club8</td>
-            <td>club9</td>		
-            <td>club10</td>
-            <td>clubQ</td>
-            <td>clubK</td>		
-            <td>clubA</td>
+            <td>clover6</td>		
+            <td>clover7</td>
+            <td>clover8</td>
+            <td>clover9</td>		
+            <td>clover10</td>
+            <td>cloverQ</td>
+            <td>cloverK</td>		
+            <td>cloverA</td>
             <td>wild</td>
           </tr>
       </table>
@@ -198,6 +198,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/bootstrap.min.js"></script>
+        
     </body>
-  
+<script>
+    
+function setUpBoard() {
+  $()  
+}   
+   
+</script>
 </html>
