--- a/sequence.html
+++ b/sequence.html
@@ -40,7 +40,7 @@
     <div class="jumbotron">
       <table style="width:100%">
           <tr>
-            <td>wild</td>
+            <td id = "wild">wild</td>
             <td id = "spade10">spade10</td>		
             <td id = "spade12">spadeQ</td>
             <td id = "spade13">spadeK</td>
@@ -52,111 +52,111 @@
             <td id = "wild">wild</td>
           </tr>
           <tr>
-            <td>spade9</td>
-            <td>heart10</td>		
-            <td>heart9</td>
-            <td>heart8</td>
-            <td>heart7</td>		
-            <td>heart6</td>
-            <td>heart5</td>
-            <td>heart4</td>		
-            <td>heart3</td>
-            <td>diamond6</td>
+            <td id = "spade9">spade9</td>
+            <td id = "heart10">heart10</td>		
+            <td id = "heart9">heart9</td>
+            <td id = "heart8">heart8</td>
+            <td id = "heart7">heart7</td>		
+            <td id = "heart6">heart6</td>
+            <td id = "heart5">heart5</td>
+            <td id = "heart4">heart4</td>		
+            <td id = "heart3">heart3</td>
+            <td id = "diamond6">diamond6</td>
           </tr><tr>
-            <td>spade8</td>
-            <td>heartQ</td>		
-            <td>diamond7</td>
-            <td>diamond8</td>
-            <td>diamond9</td>		
-            <td>diamond10</td>
-            <td>diamondQ</td>
-            <td>diamondK</td>		
-            <td>heart2</td>
-            <td>diamond7</td>
+            <td id = "spade8">spade8</td>
+            <td id = "heart12">heartQ</td>		
+            <td id = "diamond7">diamond7</td>
+            <td id = "diamond8">diamond8</td>
+            <td id = "diamond9">diamond9</td>		
+            <td id = "diamond10">diamond10</td>
+            <td id = "diamond12">diamondQ</td>
+            <td id = "diamdon13">diamondK</td>		
+            <td id = "heart2">heart2</td>
+            <td id = "diamond7">diamond7</td>
           </tr>
           <tr>
-            <td>spade7</td>
-            <td>heartK</td>		
-            <td>diamond6</td>
-            <td>clover2</td>
-            <td>heartA</td>		
-            <td>heartK</td>
-            <td>heartQ</td>
-            <td>diamondA</td>		
-            <td>spade2</td>
-            <td>diamond8</td>
+            <td id = "spade7">spade7</td>
+            <td id = "heart13">heartK</td>		
+            <td id = "diamdon6">diamond6</td>
+            <td id = "clover2">clover2</td>
+            <td id = "heart1">heartA</td>		
+            <td id = "heart13">heartK</td>
+            <td id = "heart12">heartQ</td>
+            <td id = "diamond1">diamondA</td>		
+            <td id = "spade2">spade2</td>
+            <td id = "diamond8">diamond8</td>
           </tr>
           <tr>
-            <td>spade6</td>
-            <td>heartA</td>		
-            <td>diamond5</td>
-            <td>clover3</td>
-            <td>heart4</td>		
-            <td>heart3</td>
-            <td>heart10</td>
-            <td>cloverA</td>		
-            <td>spade3</td>
-            <td>diamond9</td>
+            <td id = "spade6">spade6</td>
+            <td id = "heart1">heartA</td>		
+            <td id = "diamond5">diamond5</td>
+            <td id = "clover3">clover3</td>
+            <td id = "heart4">heart4</td>		
+            <td id = "heart3">heart3</td>
+            <td id = "heart10">heart10</td>
+            <td id = "clover1">cloverA</td>		
+            <td id = "spade3">spade3</td>
+            <td id = "diamond9">diamond9</td>
           </tr>
           <tr>
-            <td>spade5</td>
-            <td>clover2</td>		
-            <td>diamond4</td>
-            <td>clover4</td>
-            <td>heart5</td>		
-            <td>heart2</td>
-            <td>heart9</td>
-            <td>cloverK</td>		
-            <td>spade4</td>
-            <td>diamond10</td>
+            <td id = "spade5">spade5</td>
+            <td id = "clover2">clover2</td>		
+            <td id = "diamond4">diamond4</td>
+            <td id = "clover4">clover4</td>
+            <td id = "heart5">heart5</td>		
+            <td id = "heart2">heart2</td>
+            <td id = "heart9">heart9</td>
+            <td id = "clover13">cloverK</td>		
+            <td id = "spade4">spade4</td>
+            <td id = "diamond10">diamond10</td>
           </tr>
           <tr>
-            <td>spade4</td>
-            <td>clover3</td>		
-            <td>diamond3</td>
-            <td>clover5</td>
-            <td>heart6</td>		
-            <td>heart7</td>
-            <td>heart8</td>
-            <td>cloverQ</td>		
-            <td>spade5</td>
-            <td>diamondQ</td>
+            <td id = "spade4">spade4</td>
+            <td id = "clover3">clover3</td>		
+            <td id = "diamdond3">diamond3</td>
+            <td id = "clover5">clover5</td>
+            <td id = "heart6">heart6</td>		
+            <td id = "heart7">heart7</td>
+            <td id = "heart8">heart8</td>
+            <td id = "clover12">cloverQ</td>		
+            <td id = "spade5">spade5</td>
+            <td id = "diamond12">diamondQ</td>
           </tr>
           <tr>
-            <td>spade3</td>
-            <td>clover4</td>		
-            <td>diamond2</td>
-            <td>clover6</td>
-            <td>clover7</td>		
-            <td>clover8</td>
-            <td>clover9</td>
-            <td>clover10</td>		
-            <td>spade6</td>
-            <td>dimaondK</td>
+            <td id = "spade3">spade3</td>
+            <td id = "clover4">clover4</td>		
+            <td id = "diamond">diamond2</td>
+            <td id = "clover6">clover6</td>
+            <td id = "clover7">clover7</td>		
+            <td id = "clover8">clover8</td>
+            <td id = "clover9">clover9</td>
+            <td id = "clover10">clover10</td>		
+            <td id = "spade6">spade6</td>
+            <td id = "diamond13">dimaondK</td>
           </tr>
           <tr>
-            <td>spade2</td>
-            <td>clover5</td>		
-            <td>spadeA</td>
-            <td>spadeK</td>
-            <td>spadeQ</td>		
-            <td>spade10</td>
-            <td>spade9</td>
-            <td>spade8</td>		
-            <td>spade7</td>
-            <td>diamondA</td>
+            <td id = "spade2">spade2</td>
+            <td id = "clover5">clover5</td>		
+            <td id = "spade1">spadeA</td>
+            <td id = "spade13">spadeK</td>
+            <td id = "spade12">spadeQ</td>		
+            <td id = "spade10">spade10</td>
+            <td id = "spade9">spade9</td>
+            <td id = "spade8">spade8</td>		
+            <td id = "spade7">spade7</td>
+            <td id = "diamond1">diamondA</td>
           </tr>
           <tr>
-            <td>wild</td>
-            <td>clover6</td>		
-            <td>clover7</td>
-            <td>clover8</td>
-            <td>clover9</td>		
-            <td>clover10</td>
-            <td>cloverQ</td>
-            <td>cloverK</td>		
-            <td>cloverA</td>
-            <td>wild</td>
+            <td id = "wild">wild</td>
+            <td id = "clover6">clover6</td>		
+            <td id = "clover7">clover7</td>
+            <td id = "clover8">clover8</td>
+            <td id = "clover9">clover9</td>		
+            <td id = "clover10">clover10</td>
+            <td id = "clover12">cloverQ</td>
+            <td id = "clover13">cloverK</td>		
+            <td id = "clover1">cloverA</td>
+            <td id = "wild">wild</td>
           </tr>
       </table>
     </div>
