--- a/sequence.html
+++ b/sequence.html
@@ -49,7 +49,7 @@
             <td id = "diamond3">diamond3</td>
             <td id = "diamond4">diamond4</td>		
             <td id = "diamond5">diamond5</td>
-            <td id = "wild">wild</td>
+            <td id = "wild_1">wild</td>
           </tr>
           <tr>
             <td id = "spade9">spade9</td>
@@ -70,93 +70,93 @@
             <td id = "diamond9">diamond9</td>		
             <td id = "diamond10">diamond10</td>
             <td id = "diamond12">diamondQ</td>
-            <td id = "diamdon13">diamondK</td>		
+            <td id = "diamond13">diamondK</td>		
             <td id = "heart2">heart2</td>
-            <td id = "diamond7">diamond7</td>
+            <td id = "diamond7_1">diamond7</td>
           </tr>
           <tr>
             <td id = "spade7">spade7</td>
             <td id = "heart13">heartK</td>		
-            <td id = "diamdon6">diamond6</td>
+            <td id = "diamond6_1">diamond6</td>
             <td id = "clover2">clover2</td>
             <td id = "heart1">heartA</td>		
-            <td id = "heart13">heartK</td>
-            <td id = "heart12">heartQ</td>
+            <td id = "heart13_1">heartK</td>
+            <td id = "heart12_1">heartQ</td>
             <td id = "diamond1">diamondA</td>		
             <td id = "spade2">spade2</td>
-            <td id = "diamond8">diamond8</td>
+            <td id = "diamond8_1">diamond8</td>
           </tr>
           <tr>
             <td id = "spade6">spade6</td>
-            <td id = "heart1">heartA</td>		
-            <td id = "diamond5">diamond5</td>
+            <td id = "heart1_1">heartA</td>		
+            <td id = "diamond5_1">diamond5</td>
             <td id = "clover3">clover3</td>
-            <td id = "heart4">heart4</td>		
-            <td id = "heart3">heart3</td>
-            <td id = "heart10">heart10</td>
+            <td id = "heart4_1">heart4</td>		
+            <td id = "heart3_1">heart3</td>
+            <td id = "heart10_1">heart10</td>
             <td id = "clover1">cloverA</td>		
             <td id = "spade3">spade3</td>
-            <td id = "diamond9">diamond9</td>
+            <td id = "diamond9_1">diamond9</td>
           </tr>
           <tr>
             <td id = "spade5">spade5</td>
-            <td id = "clover2">clover2</td>		
-            <td id = "diamond4">diamond4</td>
+            <td id = "clover2_1">clover2</td>		
+            <td id = "diamond4_1">diamond4</td>
             <td id = "clover4">clover4</td>
-            <td id = "heart5">heart5</td>		
-            <td id = "heart2">heart2</td>
-            <td id = "heart9">heart9</td>
+            <td id = "heart5_1">heart5</td>		
+            <td id = "heart2_1">heart2</td>
+            <td id = "heart9_1">heart9</td>
             <td id = "clover13">cloverK</td>		
             <td id = "spade4">spade4</td>
-            <td id = "diamond10">diamond10</td>
+            <td id = "diamond10_1">diamond10</td>
           </tr>
           <tr>
-            <td id = "spade4">spade4</td>
-            <td id = "clover3">clover3</td>		
-            <td id = "diamdond3">diamond3</td>
+            <td id = "spade4_1">spade4</td>
+            <td id = "clover3_1">clover3</td>		
+            <td id = "diamond3_1">diamond3</td>
             <td id = "clover5">clover5</td>
-            <td id = "heart6">heart6</td>		
-            <td id = "heart7">heart7</td>
-            <td id = "heart8">heart8</td>
+            <td id = "heart6_1">heart6</td>		
+            <td id = "heart7_1">heart7</td>
+            <td id = "heart8_1">heart8</td>
             <td id = "clover12">cloverQ</td>		
-            <td id = "spade5">spade5</td>
-            <td id = "diamond12">diamondQ</td>
+            <td id = "spade5_1">spade5</td>
+            <td id = "diamond12_1">diamondQ</td>
           </tr>
           <tr>
-            <td id = "spade3">spade3</td>
-            <td id = "clover4">clover4</td>		
-            <td id = "diamond">diamond2</td>
+            <td id = "spade3_1">spade3</td>
+            <td id = "clover4_1">clover4</td>		
+            <td id = "diamond2_1">diamond2</td>
             <td id = "clover6">clover6</td>
             <td id = "clover7">clover7</td>		
             <td id = "clover8">clover8</td>
             <td id = "clover9">clover9</td>
             <td id = "clover10">clover10</td>		
-            <td id = "spade6">spade6</td>
-            <td id = "diamond13">dimaondK</td>
+            <td id = "spade6_1">spade6</td>
+            <td id = "diamond13_1">dimaondK</td>
           </tr>
           <tr>
-            <td id = "spade2">spade2</td>
-            <td id = "clover5">clover5</td>		
-            <td id = "spade1">spadeA</td>
-            <td id = "spade13">spadeK</td>
-            <td id = "spade12">spadeQ</td>		
-            <td id = "spade10">spade10</td>
-            <td id = "spade9">spade9</td>
-            <td id = "spade8">spade8</td>		
-            <td id = "spade7">spade7</td>
-            <td id = "diamond1">diamondA</td>
+            <td id = "spade2_1">spade2</td>
+            <td id = "clover5_1">clover5</td>		
+            <td id = "spade1_1">spadeA</td>
+            <td id = "spade13_1">spadeK</td>
+            <td id = "spade12_1">spadeQ</td>		
+            <td id = "spade10_1">spade10</td>
+            <td id = "spade9_1">spade9</td>
+            <td id = "spade8_1">spade8</td>		
+            <td id = "spade7_1">spade7</td>
+            <td id = "diamond1_1">diamondA</td>
           </tr>
           <tr>
-            <td id = "wild">wild</td>
-            <td id = "clover6">clover6</td>		
-            <td id = "clover7">clover7</td>
-            <td id = "clover8">clover8</td>
-            <td id = "clover9">clover9</td>		
-            <td id = "clover10">clover10</td>
-            <td id = "clover12">cloverQ</td>
-            <td id = "clover13">cloverK</td>		
-            <td id = "clover1">cloverA</td>
-            <td id = "wild">wild</td>
+            <td id = "wild_2">wild</td>
+            <td id = "clover6_1">clover6</td>		
+            <td id = "clover7_1">clover7</td>
+            <td id = "clover8_1">clover8</td>
+            <td id = "clover9_1">clover9</td>		
+            <td id = "clover10_1">clover10</td>
+            <td id = "clover12_1">cloverQ</td>
+            <td id = "clover13_1">cloverK</td>		
+            <td id = "clover1_1">cloverA</td>
+            <td id = "wild_3">wild</td>
           </tr>
       </table>
     </div>
@@ -201,10 +201,31 @@
         
     </body>
 <script>
-    
+
 function setUpBoard() {
-  $()  
-}   
-   
+    //set up the spade images
+    for (var i = 1; i < 14; i++) {   
+        $("#spade" + i).html("<img id = 'spade"  + i + "img' src = 'assets/svg/spade" + i +".svg' height = '100' width = '90' draggable = 'false'/>");
+        $("#spade" + i + "_1").html("<img id = 'spade" + i + "_1img' src = 'assets/svg/spade" + i +".svg' height = '100' width = '90' draggable = 'false'/>");
+        $("#diamond" + i).html("<img id = 'diamond" + i + "img' src = 'assets/svg/diamond" + i +".svg' height = '100' width = '90' draggable = 'false'/>"); 
+        $("#diamond" + i + "_1").html("<img id = 'diamond" + i + "_1img' src = 'assets/svg/diamond" + i +".svg' height = '100' width = '90' draggable = 'false'/>"); 
+        $("#heart" + i).html("<img id = 'heart" + i + "img' src = 'assets/svg/heart" + i + ".svg' height = '100' width = '90' draggable = 'false'/>"); 
+        $("#heart" + i +"_1").html("<img id = 'heart" + i + "_1img' src = 'assets/svg/heart" + i + ".svg' height = '100' width = '90' draggable = 'false'/>"); 
+    	$("#clover" + i).html("<img id = 'clover" + i + "img' src = 'assets/svg/clover" + i + ".svg' height = '100' width = '90' draggable = 'false'/>"); 
+        $("#clover" + i +"_1").html("<img id = 'clover" + i + "_1img' src = 'assets/svg/clover" + i + ".svg' height = '100' width = '90' draggable = 'false'/>"); 
+    } 
+}
+
+setUpBoard();
+
+
+
+
+
+
+
+
+
+
 </script>
 </html>
