--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
         <p><a class="btn btn-lg btn-success" href="sequence.html" role="button">Start</a></p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Rules</a></p>
         <div class="rules">
-          <p class="lead">Placeholder for rules.<br><i>JavaScript will make this container appear and disappear!</i></p>
+          <p><i>JavaScript will make this container appear and disappear!</i></p>
+          <h2>OBJECT OF THE GAME:</h2>
+          <p>Connect a series of five of the same colour chip either up or down, across or diagonally on the playing surface.</p>
+          <p>NOTE: There are printed chips in the four corners of the game board. All players must use them as though their color marker chip is in the corner. When using a corner, only four of your marker chips are needed to complete a Sequence. More than one player may use the same corner as part of a Sequence.</p>
+          <p>For 2 players: One player or team must score TWO SEQUENCES before their opponents.<br>For 3 players: One player or team must score ONE SEQUENCE before their opponents.</p>
+          <h2>RULES:</h2>
+          <h3>Set-up<h3>
+          <p>Each player selects a card of their choice from their hand and places it face up on a discard pile (players should start their own discard pile in front of them visible to all other players) and then places one of their marker chips on the matching card on the game board. Each card is pictured twice on the game board. Jacks do not appear on the game board. A player can play on either one of the card spaces as long as it is not already covered by another marker chip. Once a marker chip has been played, it cannot be removed by an opponent except when using a one-eyed Jack as explained below.</p>
+          <h3>The Jacks</h3>
+          <p>There are 8 Jacks in the card deck. The 4 Jacks with TWO EYES are wild. To play a two-eyed Jack, place it on your discard pile and place one of your marker chips on any open space on the game board. The 4 jacks with ONE EYE are anti-wild. To play a one-eyed Jack, place it on your discard pile and remove one marker chip from the game board belonging to your opponent. That completes your turn. You cannot place one of your marker chips on that same space during this turn. You cannot remove a marker chip that is already part of a completed SEQUENCE. Once a SEQUENCE is achieved by a player or a team, it cannot be broken. You may play either one of the Jacks whenever they work best for your strategy, during your turn.</p>
+          <h3>Dead Card</h3>
+          <p>If you hold a card in your hand which does not have an open space on the game board because both spaces representing that card are covered by a marker chip, you are holding a DEAD CARD and you may turn it in for a new card. When it is your turn, place the dead card on your discard pile, announce that you are turning in a Dead Card and take a replacement card (one card per turn). You then proceed to play your normal turn.</p>
         </div>
       </div>
     <footer>
