--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>SEQUENCE</h1>
         <p><a class="btn btn-lg btn-success" href="sequence.html" role="button">Start</a></p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Rules</a></p>
-        <div class="rules">
+        <div class="rules" style="display:none">
           <p><i>JavaScript will make this container appear and disappear!</i></p>
           <h2>OBJECT OF THE GAME:</h2>
           <p>Connect a series of five of the same colour chip either up or down, across or diagonally on the playing surface.</p>
