--- a/sequence.html
+++ b/sequence.html
@@ -209,7 +209,7 @@
 function setUpBoard() {
     //set up for boardgame wild images
     for (var i = 1; i < 8; i++) {
-        $("#wild_" + i).html("<img class='bgcard' id='wild_"  + i + "img' src = 'assets/svg/cardback.svg' height = '100' width = '90' draggable = 'false'/>");
+        $("#wild_" + i).html("<img class='bgcard' id='wild"  + i + "img' src = 'assets/svg/wild.svg' height = '100' width = '90' draggable = 'false'/>");
     }
     
     //set up the boardgame card images
