--- a/sequence.html
+++ b/sequence.html
@@ -170,8 +170,8 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-2">
-          <h3>ONE-EYED JACK</h3>
-          <h3>TWO-EYED JACK</h3>
+          <p>ONE-EYED JACK IS REMOVE</h3>
+          <p>TWO-EYED JACK IS WILD</h3>
         </div>
         <div class="col-md-8">
           <table class="area_hand">
