--- a/sequence.html
+++ b/sequence.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -227,8 +227,11 @@ function setUpBoard() {
         $("#heart" + i +"_1").html("<img class='img-responsive-reverse bgcard' id='heart" + i + "_1img' src = 'assets/svg/heart" + i + ".svg' height = '100' width = '90' draggable = 'false'/>");
         $("#clover" + i +"_1").html("<img class='img-responsive-reverse bgcard' id='clover" + i + "_1img' src = 'assets/svg/clover" + i + ".svg' height = '100' width = '90' draggable = 'false'/>");
     }
+    
     //setup placeholder for hand
-   
+    for (var i=1; i<8; i++) {
+        $("#hand" + i).html("<img class='img-responsive handcard' id='hand"  + i + "img' src = 'assets/svg/cardback.svg' height = '100' width = '90' draggable = 'false'/>");
+    }
     mainDeck = new Deck();
     mainDeck.printDeck();
 }
@@ -237,15 +240,10 @@ function setUpBoard() {
 var mainDeck;
 
 setUpBoard();
-var testcard = mainDeck.drawCard();
 
-for (var i = 1; i < 8; i++) {
-    $("#hand" + i).html("<img class='img-responsive handcard' id='hand" + i + "img' src = " + testcard.getImageSource() + " height = '100' width = '90' draggable = 'true'/>");
-    var testcard = mainDeck.drawCard();
-}
 //for testing
-//var testcard = mainDeck.drawCard();
-//console.log(testcard.getImageSource());
-//console.log(testcard.toString());
+var testcard = mainDeck.drawCard();
+console.log(testcard.getImageSource());
+console.log(testcard.toString());
 </script>
 </html>
