--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
    <head>
       <meta charset="utf-8">
@@ -30,13 +30,13 @@
                      <!-- Modal content-->
                      <div class="modal-content">
                         <div class="modal-body">
-                           <h2>OBJECT OF THE GAME:</h2>
+                           <h2>OBJECTIVE OF THE GAME:</h2>
                            <p>Connect a series of five of the same colour chip either horizontally, vertically, or diagonally on the board.</p>
                            <p>NOTE: The corners of the board are wild and players can use it towards their sequence.</p>
                            <p>For 2 teams: Score 2 sequences before your opponents.<br>For 3 teams: Score 1 sequence before your opponents.</p>
                            <h2>RULES:</h2>
                            <h3>Set-up</h3>
-                           <p>The board contains 2 copies of each playing card. When you select a card, you may select a place for your token as long as it isn't already taken. Jacks are special cards and do not appear on the board.</p>
+                           <p>The board contains 2 copies of each playing card. Jacks are special cards and do not appear on the board. Click and drag a card from your hand to an available spot on the board to play it.</p>
                            <h3>The Jacks</h3>
                            <p>There are 8 Jacks in the card deck. The 4 Jacks with TWO EYES are wild, meaning place a token at any open location. The 4 jacks with ONE EYE are remove, meaning to remove any token from the board as long as it's not part of a completed sequence</p>
                            <h3>Dead Card</h3>
