--- a/sequence.html
+++ b/sequence.html
@@ -22,6 +22,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
 
 <body>
@@ -41,8 +42,51 @@
                 </div>
 
                 <!-- TODO: Rules button -->
-                <div class="col-md-3 rightAlign">
+                <!--<div class="col-md-3 rightAlign">
                     <h1 id="rules" style="text-align:right">Rules</h1>
+                </div>-->
+
+                <div class="container" style="text-align:center">
+                    <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#myModal2" id="Rules">Rules</button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal2" role="dialog" tabindex="-1" aria-labelledby="myModalLabel">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <h2>OBJECTIVE OF THE GAME:</h2>
+                                    <p>Connect a series of five of the same colour chip either horizontally, vertically, or diagonally on the board.</p>
+                                    <p>NOTE: The corners of the board are wild and players can use it towards their sequence.</p>
+                                    <p>For 2 teams: Score 2 sequences before your opponents.<br>For 3 teams: Score 1 sequence before your opponents.</p>
+                                    <h2>RULES:</h2>
+                                    <h3>Set-up</h3>
+                                    <p>The board contains 2 copies of each playing card. Jacks are special cards and do not appear on the board. Click and drag a card from your hand to an available spot on the board to play it.</p>
+                                    <h3>The Jacks</h3>
+                                    <p>There are 8 Jacks in the card deck. The 4 Jacks with TWO EYES are wild, meaning place a token at any open location. The 4 jacks with ONE EYE are remove, meaning to remove any token from the board as long as it's not part of a completed sequence</p>
+                                    <h3>Dead Card</h3>
+                                    <p>If you hold a card in your hand with no available space, you may replace the card for a new one and proceed with your turn as normal.</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="endModal" role="dialog" tabindex="-1" aria-labelledby="endModal-label" style="text-align:center">
+                    <div class="modal-dialog modal-sm" role="document">
+                        <div class="modal-content">
+                            <div class="modal-title" id="endModal-label">
+                                <h1>You won!</h1>
+                            </div>
+                            <div class="modal-body">
+                                <p><a class="btn btn-lg btn-success" href="sequence.html" role="button">Replay</a></p>
+                                <p><a class="btn btn-lg btn-success" href="index.html" role="button">Home</a></p>
+                            </div>
+                            <div class="modal-footer">
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -236,27 +280,40 @@
 
     </div> <!-- /container -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <!--jQueryui-->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <!-- Javascript for stylization of our website -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Javascript for game -->
     <script src="js/card.js"></script>
     <script src="js/deck.js"></script>
-    </div>
+
 </body>
 
 <script>
     // temporary js
     // will be moved to the board/hand generation javascript
+
+    //This should be what the Win Condition checker looks like. By default the modal will say 'You Won!' So just show it if won. It other conditions, change the title.
+    //if (winCondition == 1) {
+    //    $("#endModal-label").html('<h1>You lost!</h1>');
+    //    $("#endModal").modal('show');
+    //}
+    //else if (winCondition == 2) {
+    //    $("#endModal-label").html('<h1>Tie!</h1>');
+    //    $("#endModal").modal('show');
+    //}
+    //else {
+    //    $("#endModal").modal('show');
+    //}
+
     function init() {
         mainDeck = new Deck();
         playerHand = new Array();
         opponentOne = new Array();
         opponentTwo = new Array();
         discardPile = new Array();
-
 
 
 
@@ -400,6 +457,7 @@
             //they are the same
             placeAndDraw(ui, locationID);
         }
+        
     }
 
     function discardDrop(event, ui) {
@@ -514,6 +572,7 @@
         //reveal token -- format: "token_<id>img"
  //       var token = "token_" + locationID + "img";
         document.getElementById(token).style.visibility = 'visible';
+
     }
 
     function removeAndDraw(ui, locationID) {
@@ -555,7 +614,5 @@
     $(init());
 
 
-
 </script>
-
 </html>
