Logo + ref and align Rules Button
Place in Sequence logo in sequence.html. Did not want to place in
index.html as it looks far too ugly stretched out. Clicking on logo
bring back to homepage. Also aligned Rules button

--- a/sequence.html
+++ b/sequence.html
@@ -29,7 +29,11 @@
             <div class="row">
                 <!-- TODO: Title -->
                 <div class="col-md-3 leftAlign">
-                    <h1 id="title">SEQUENCE</h1>
+                    <a href="index.html">
+                        <img src="sequenceLogo.png"
+                             alt="SEQUENCE"
+                             vspace="20" border="0" />
+                    </a>
                 </div>
 
                 <!-- TODO: Players turn area -->
@@ -37,8 +41,8 @@
                     <h1 id="playersTurn" style="text-align:center">Players Turn</h1>
                 </div>
 
-                <div class="container" style="text-align:center">
-                    <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#myModal2" id="Rules">Rules</button>
+                <div class="container" style="text-align:center; padding:20px">
+                    <button type="button" vspace ="20" style="float:right" class="btn btn-lg btn-success" data-toggle="modal" data-target="#myModal2" id="Rules">Rules</button>
                     <!-- Modal -->
                     <div class="modal fade" id="myModal2" role="dialog" tabindex="-1" aria-labelledby="myModalLabel">
                         <div class="modal-dialog" role="document">
