--- a/sequence.html
+++ b/sequence.html
@@ -771,7 +771,8 @@
         mainDeck = new Deck();
         playerHand = new Array();
         discardPile = new Array();
-        comp = new Computer(1);//will change later;
+        var testValue = 1;
+        comp = new computer(testValue);//will change later;
         
         //set up the hand for the players
         for (var i = 1; i < 8; i++) {
