Reworked condition.js
Few lines of code and calls the end modal. May still be bugs.

--- a/sequence.html
+++ b/sequence.html
@@ -1435,7 +1435,7 @@
                 }
         }
        playerHand = newArray.slice();
-       console.log(playerHand.toString());
+//       console.log(playerHand.toString());
     }
     
     //function that checks if the deck has run out of cards
